; ModuleID = '/home/carl/AnghaBench/git/extr_argv-array.c_argv_array_pop.c'
source_filename = "/home/carl/AnghaBench/git/extr_argv-array.c_argv_array_pop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.argv_array = type { i32, i32** }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @argv_array_pop(%struct.argv_array* %0) #0 {
  %2 = alloca %struct.argv_array*, align 8
  store %struct.argv_array* %0, %struct.argv_array** %2, align 8
  %3 = load %struct.argv_array*, %struct.argv_array** %2, align 8
  %4 = getelementptr inbounds %struct.argv_array, %struct.argv_array* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %34

8:                                                ; preds = %1
  %9 = load %struct.argv_array*, %struct.argv_array** %2, align 8
  %10 = getelementptr inbounds %struct.argv_array, %struct.argv_array* %9, i32 0, i32 1
  %11 = load i32**, i32*** %10, align 8
  %12 = load %struct.argv_array*, %struct.argv_array** %2, align 8
  %13 = getelementptr inbounds %struct.argv_array, %struct.argv_array* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = sub nsw i32 %14, 1
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32*, i32** %11, i64 %16
  %18 = load i32*, i32** %17, align 8
  %19 = bitcast i32* %18 to i8*
  %20 = call i32 @free(i8* %19)
  %21 = load %struct.argv_array*, %struct.argv_array** %2, align 8
  %22 = getelementptr inbounds %struct.argv_array, %struct.argv_array* %21, i32 0, i32 1
  %23 = load i32**, i32*** %22, align 8
  %24 = load %struct.argv_array*, %struct.argv_array** %2, align 8
  %25 = getelementptr inbounds %struct.argv_array, %struct.argv_array* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = sub nsw i32 %26, 1
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i32*, i32** %23, i64 %28
  store i32* null, i32** %29, align 8
  %30 = load %struct.argv_array*, %struct.argv_array** %2, align 8
  %31 = getelementptr inbounds %struct.argv_array, %struct.argv_array* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = add nsw i32 %32, -1
  store i32 %33, i32* %31, align 8
  br label %34

34:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
